--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <title>Cody Howarth</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <script defer src="/assets/icons/fontawesome/fontawesome-all.min.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body id="mainpage">
-
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand p-0 mb-1" href="index.html">
             <span id="navBrandName" class="h6 py-0">Cody Howarth</span>
         </a>
-
         <button class="navbar-toggler py-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -36,29 +32,24 @@
             </ul>
         </div>
     </nav>
-
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Cody Howarth</h1>
             <p id="summary-text" class="lead">Software Developer and Computer Science Graduate</p>
         </div>
     </div>
-
     <main id="mainBody" class="container pt-3">
-
         <div id="about" class="row">
             <div class="col-xl-9">
                 <h3 class="customH3">About me</h3>
-                <p>I've always loved building things. My first career involved building
-                    tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
+                <p>I've always loved building things. My first career involved building tools and prototype parts as a <a href="//en.wikipedia.org/wiki/Machinist">Machinist</a>.
                     I graduated from <a href="//www.conestogac.on.ca/">Conestoga College</a> with a
-                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a> 
-                    and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>
-                    while working as a full time Machinist. My interest in learning new technologies
-                    eventually led me to pursue a degree in Computer Science. I recently graduated from
-                    <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science.
-                    Last year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree, and learn 
-                    real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed to.
+                    <a href="//www.conestogac.on.ca/fulltime/mechanical-technician-general-machinist-co-op">Mechanical Technician Diploma</a>                    and completed my <a href="//www.red-seal.ca/trades/m.1ch.3n.3st-eng.html">Red Seal Trade Certification</a>                    while working as a full time Machinist. My interest in learning new technologies eventually led me to
+                    pursue a degree in Computer Science. I recently graduated from
+                    <a href="//www.utoronto.ca/">University of Toronto</a>, with a specialization in Computer Science. Last
+                    year I worked as a Software Developer Intern, where I was able to apply the knowledge from my degree,
+                    and learn real world dev skills. Here are some <a href="projects.html">projects</a> that I've contributed
+                    to.
                 </p>
             </div>
             <div class="col">
@@ -90,7 +81,6 @@
             </div>
         </div>
     </main>
-
     <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
             <div class="col pl-4 pt-2">
@@ -112,7 +102,6 @@
             </div>
         </div>
     </footer>
-
     <script src="/js/jquery.min.js"></script>
     <script src="/js/tether.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
