--- a/projects.html
+++ b/projects.html
@@ -5,23 +5,19 @@
     <title>Cody Howarth - Projects</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <script defer src="/assets/icons/fontawesome/fontawesome-all.min.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-
     <nav class="navbar sticky-top py-0 navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand py-0" href="index.html">
             <span id="navBrandName" class="h6">Cody Howarth</span>
         </a>
-
         <button class="navbar-toggler py-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -36,93 +32,81 @@
             </ul>
         </div>
     </nav>
-
     <div class="jumbotron">
         <div class="container">
             <h1 id="job-title" class="display-4">Projects</h1>
             <p id="summary-text" class="lead">Work that I have contributed to</p>
         </div>
-
     </div>
-
     <main id="mainBody" class="container">
-
         <div class="row py-3">
             <div class="col-sm py-4">
-                    <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank">
+                <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank">
                 <img src="https://i.imgur.com/fMCVYMw.png" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-               <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><h3 class="customH3 pb-0 my-0">Road RAGE</h3></a></div>
+                    <a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><h3 class="customH3 pb-0 my-0">Road RAGE</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="https://github.com/DuncanLab/RoadRAGE" target="_blank"><span class="subtitle">https://github.com/DuncanLab/RoadRAGE</span></a></div>
-                <p class="left-align">A driving simulator designed to help test decision making processes for neuroscience research. Developed using <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Currently in the role of lead developer. The project is in the prototype phase.</p>
+                <p class="left-align">A driving simulator designed to help test decision making processes for neuroscience research. Developed
+                    using
+                    <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Currently in the role of lead developer.
+                    The project is in the prototype phase.</p>
             </div>
         </div>
-
         <hr>
-
         <div class="row py-3">
             <div class="col-sm py-4">
-                    <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank">
+                <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank">
                 <img src="https://i.imgur.com/M1Ep92b.png" height="200" width="300" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-               <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
+                    <a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><h3 class="customH3 pb-0 my-0">OpenMaze</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="https://duncanlab.github.io/OpenMazeSite" target="_blank"><span class="subtitle"></span>https://duncanlab.github.io/OpenMazeSite</a></div>
-                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research.
-                    Developed using <a href="https://unity3d.com" target="_blank">Unity 3D</a>. Uses JSON standard for
-                    configuration files, and python for trial generation and statistical helpers. Currently in the role of 
-                supporting developer.</p>
+                <p class="left-align">3D Maze designed to simulate the morris maze experiment for neuroscience research. Developed using <a href="https://unity3d.com"
+                        target="_blank">Unity 3D</a>. Uses JSON standard for configuration files, and python for trial generation
+                    and statistical helpers. Currently in the role of supporting developer.</p>
             </div>
         </div>
-
         <hr>
-
         <div class="row py-3">
             <div class="col-sm py-4">
-                    <a href="http://trivia-battle.herokuapp.com" target="_blank">
+                <a href="http://trivia-battle.herokuapp.com" target="_blank">
                 <img src="assets/images/triviabattle.PNG" class="rounded d-block"></a>
             </div>
             <div class="col-sm-8">
                 <div class="customH3">
-               <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="customH3 pb-0 my-0">Trivia Battle</h3></a></div>
+                    <a href="http://trivia-battle.herokuapp.com" target="_blank"><h3 class="customH3 pb-0 my-0">Trivia Battle</h3></a></div>
                 <div class="pt-0 mt-0 mb-4"><a href="http://trivia-battle.herokuapp.com" target="_blank"><span class="subtitle">http://trivia-battle.herokuapp.com</span></a></div>
                 <p class="left-align">A multiplayer trivia game that allows players to connect from any device. Uses
-                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a> for event driven client updates as the round progresses. Client and game server communicate
-                    using
-                    <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability. Front-end was programmed using
+                    <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API" target="_blank">Websockets</a>                    for event driven client updates as the round progresses. Client and game server communicate using
+                    <a href="https://redis.io/" target="_blank">Redis</a> messaging to allow for quick horizontal scalability.
+                    Front-end was programmed using
                     <a href="https://vuejs.org/" target="_blank">Vue.js</a>, back-end is mostly
                     <a href="https://nodejs.org/en/" target="_blank">Node JS</a>.
                 </p>
             </div>
         </div>
-
         <hr>
-
         <div class="row py-3">
             <div class="col-sm py-4">
                 <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><img src="assets/images/spaghetti.PNG" class="rounded d-block"></a>
-                
             </div>
             <div class="col-sm-8">
-                    <div class="customH3">
+                <div class="customH3">
                     <a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><h3 class="customH3 pb-0 my-0">Spaghetti Makes me Moody</h3></a></div>
-                    <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a></div>
+                <div class="pt-0 mt-0 mb-4"><a href="https://spaghetti-makes-me-moody.herokuapp.com/" target="_blank"><span class="subtitle">https://spaghetti-makes-me-moody.herokuapp.com</span></a></div>
                 <p>An online journal that uses
-                    <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a> to analyze the sentiment (mood) of a user's journal entries to give them
-                    feedback. If a user creates an account, they are able to save, and track their entries over time. Uses
+                    <a href="https://cloud.google.com/natural-language/" target="_blank">Google Natural Language API</a>                    to analyze the sentiment (mood) of a user's journal entries to give them feedback. If a user creates
+                    an account, they are able to save, and track their entries over time. Uses
                     <a href="https://reactjs.org/" target="_blank">React</a> for the front-end. Back-end API created with
                     <a href="https://github.com/swagger-api/swagger-node" target="_blank">Swagger node</a> for express, and
                     <a href="https://www.mongodb.com/" target="_blank">MongoDB</a> for database operations.
                 </p>
             </div>
         </div>
-
-
     </main>
-
     <footer class="footer fixed-bottom border-top border-gray pt-1 pb-1">
         <div class="row">
             <div class="col pl-4 pt-2">
@@ -144,7 +128,6 @@
             </div>
         </div>
     </footer>
-
     <script src="/js/jquery.min.js"></script>
     <script src="/js/tether.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
